# doodads

./: .gitignore  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: test-doodads.yml
docs/: conf.py  index.rst
doodads/: __init__.py  analysis.py  commands.py  math.py  plotting.py  test_analysis.py  test_math.py  utils.py
doodads/commands/: __init__.py  completeness.py  contrast_to_mass.py
doodads/data/: README.md
doodads/modeling/: __init__.py  astrometry.py  orbits.py  photometry.py  physics.py  spectra.py  test_astrometry.py  test_physics.py  test_spectra.py  units.py
doodads/modeling/io/: __init__.py  hst_calspec.py  mko_filters.py  settl_cond.py  test_hst_calspec.py  test_mko_filters.py  (+1 more)
doodads/ref/: Vigan2015_Fig2_contrast.csv  __init__.py  bobcat.py  castelli_kurucz.py  clio.py  eso_atmospheres.py  facts.py  gemini_atmospheres.py  helpers.py  hst_calspec.py  ircs.py  macdonald_2018.py  magaox.py  magellan_atmospheres.py  mko_filters.py  model_grids.py  settl_cond.py  solar_system.py  sphere.py  sphere_beuzit_2019_fig9.csv  test_bobcat.py  test_hst_calspec.py  test_mko_filters.py  test_settl_cond.py  visir.py
notebooks/: Atmospheric transmission.ipynb  Compare Bobcat evolution to Bobcat spectra.ipynb  MagAO-X H-alpha and continuum.ipynb  Make function monotonic for inversion.ipynb  Random orbit epochs.ipynb  Reproduce Bobcat evolution and photometry.ipynb  Reproduce MKO F_lambda for Vega.ipynb  Reproducing the BT-Settl MKO isochrones.ipynb  The Case of the Varying Vega.ipynb  Using the solar system surface brightness spectra.ipynb
(+1 files in other folders)
