[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doodads"
version = "0.0.1.dev"
description = "A collection of useful signal processing and astronomy functionality"
readme = "README.md"
authors = [
  { name = "Joseph D. Long", email = "me@joseph-long.com" },
]
dependencies = [
  "pytest>=5.4.2",
  "numpy>=1.16",
  "scipy>=1.2.1",
  "matplotlib>=3.1.3",
  "astropy>=4.0.1",
  "joblib>=0.14.1",
  "scikit-image>=0.16.2",
  "requests>=2.27.1",
  "xconf>=0.0.1",
  "tqdm>=4.62.3,<5",
  "coloredlogs>=15.0.1,<16",
  "ray>=2.7.0",
  "projecc>=1.0,<2",
  "fsspec",
  "pyviewarr>=0.3.3",
]

[project.urls]
Homepage = "https://github.com/joseph-long/doodads"

[project.scripts]
ddx = "doodads.commands:DISPATCHER.main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["doodads*"]

[tool.setuptools.package-data]
"doodads.ref" = ["3.9um_Clio.dat"]

[tool.uv.sources]
projecc = { path = "../projecc", editable = true }
